# GeoSupply

./: .coverage  .env.example  .gitignore  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
Documents/: DEVELOPMENT_TRAIL.md
Documents/fa_v3_architecture/: 00_glossary.md  00_index.md  00_status.md
Documents/final_architecture/: 00_Index.md  Part_III_SubAgent_Layer.md  Part_II_Worker_Layer.md  Part_IV_Agent_Layer.md  Part_IX_Revenue_DevOps.md  Part_I_Foundation.md  Part_VIII_Security.md  Part_VII_Operations.md  Part_VI_Intelligence_Engine.md  Part_V_Supervisor_Orchestrator.md  Part_XI_API_Reference.md  Part_X_Registry_Roadmap.md
Documents/v10_architecture/: 00_index.md  01_v10_executive_summary.md  02_loophole_hunter_layer.md  03_logic_gap_fixes.md  04_new_workers.md  05_new_agents_subagents.md  06_new_supervisors.md  07_security_hardening.md  08_disaster_recovery.md  09_api_skills_registry.md  10_full_component_census.md
Documents/v9_architecture/: 00_index.md  01_executive_summary.md  02_swarm_topology.md  03_worker_layer.md  04_subagent_layer.md  05_agent_layer.md  06_supervisor_layer.md  07_orchestrator_layer.md  08_static_methods.md  09_modern_patterns.md  10_schemas_contracts.md  11_infrastructure.md  12_dev_test_layer.md  13_build_roadmap.md  14_self_learning_intelligence.md  15_admin_cli_portal.md  16_autonomous_operations.md  17_dev_tooling.md  18_cyber_security.md  19_tech_team_cicd.md  20_marketing_agent.md  21_v10_audit.md
scripts/: phase_end_audit.py
src/geosupply.egg-info/: PKG-INFO  (+4 more)
tests/: __init__.py  conftest.py
(+97 files in other folders)
