[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosupply"
version = "0.1.0"
description = "India-centric geopolitical supply chain intelligence platform"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [{name = "GeoSupply Team"}]

dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.25.0",
    "chromadb>=0.4.0",
    "supabase>=2.0.0",
    "xgboost>=2.0.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "streamlit>=1.30.0",
    "rich>=13.0.0",
    "pyotp>=2.9.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
geosupply = "geosupply.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
where = ["src"]
